# PFE-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  script_pfe (1).sql  script_pfe.sql
.github/workflows/: DevPush.yml  Prod.yml  devMerge.yml  docker-image.yml  mainMergePush.yml  main_snappies-backend-prod.yml  mergeDev.yml  rust.yml
requests/: auth.http  boxe.http  client.http  items.http  order.http  tours.http
src/: main.rs
src/api/: notes.rs
src/configuration/: BD_conf.rs  creation_tours_automation.rs  injection.rs  mod.rs  route_configuration.rs
src/models/: PgsqlConn.rs  User.rs  boxe.rs  client.rs  item.rs  mod.rs  order.rs  pgsqlConn.rs  quantity_left_model.rs  regular_order.rs  regular_order_line.rs  tours.rs  tours_day.rs  user.rs
src/repository/: boxe_repository.rs  client_repository.rs  dbconnection_repo.rs  itemRepo.rs  item_repository.rs  mod.rs  order_repository.rs  pgsqlConn.rs  pgsql_connection.rs  test_repo.rs  tours_repository.rs  userRepo.rs  user_repository.rs
src/routes/: auth.rs  boxe.rs  client.rs  clients.rs  index.rs  items.rs  mod.rs  order.rs  tours.rs  users.rs
src/service/: boxe_service.rs  client_service.rs  itemService.rs  item_service.rs  mod.rs  order_service.rs  tours_repository.rs  tours_service.rs  userService.rs  user_service.rs
src/tests/: test.rs  tours.http
src/ucc/: itemUCC.rs  mod.rs  pgsqlConn.rs  userUCC.rs
