[package]
name = "PFE-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.5"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
sqlx-core = "0.7.3"
sqlx-macros = "0.7.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.3.0"
env_logger = "0.10.1"
log = "^0.4"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
derive_more = "^0.99"
dotenv = "0.15.0"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
time = { version = "0.3.30", features = [] }

[dev-dependencies]
cargo-udeps = "0.1.21"
